# sundials

./: CMakeLists.txt
.github/actions/test-driver/: action.yml
.github/workflows/: build-ci-containers-e4s.yml  build-ci-containers-nightly.yml  double-precision.yml  spack-develop.yml  ubuntu-clang-latest.yml
benchmarks/diffusion_2D/: main_cvode.cpp
cmake/: SUNDIALSConfig.cmake.in  SundialsBuildOptionsPost.cmake  SundialsBuildOptionsPre.cmake  SundialsSetupCompilers.cmake  SundialsSetupTPLs.cmake  SundialsSetupTesting.cmake  SundialsTPLOptions.cmake
cmake/macros/: SundialsAddTest.cmake
cmake/tpl/: FindPSCTOOLKIT.cmake  SundialsPSCTOOLKIT.cmake
doc/superbuild/source/developers/development/: Checklist.rst
doc/superbuild/source/developers/testing/: CI.rst
examples/: CMakeLists.txt
examples/arkode/C_parallel/: ark_diurnal_kry_bbd_p.c  ark_diurnal_kry_bbd_p.out  ark_diurnal_kry_p.c  ark_diurnal_kry_p.out
examples/arkode/C_parhyp/: ark_diurnal_kry_ph.c  ark_diurnal_kry_ph.out
examples/arkode/C_serial/: ark_KrylovDemo_prec.c  ark_KrylovDemo_prec.out
examples/arkode/F2003_parallel/: ark_diag_kry_bbd_f2003.f90  ark_diag_kry_bbd_f2003.out
examples/arkode/F2003_serial/: ark_diurnal_kry_bp_f2003.f90  ark_diurnal_kry_bp_f2003.out
examples/cvode/superludist/: CMakeLists.txt
examples/nvector/: CMakeLists.txt
examples/nvector/psblas/: CMakeLists.txt  test_nvector_psblas.c
examples/sunlinsol/: CMakeLists.txt
examples/sunlinsol/magmadense/: test_sunlinsol_magmadense.cpp
examples/sunlinsol/psblas/: CMakeLists.txt  amgopts.inp  test_sunlinsol_psblas.c
examples/sunlinsol/superludist/: CMakeLists.txt
examples/sunmatrix/: CMakeLists.txt
examples/sunmatrix/psblas/: CMakeLists.txt  test_sunmatrix_psblas.c
examples/sunmatrix/slunrloc/: CMakeLists.txt
examples/templates/: cmakelists_psblas_C_ex.in  makefile_psblas_C_ex.in
include/nvector/: nvector_psblas.h
include/sundials/: sundials_allocator.h  sundials_context.h  sundials_nvector.h  sundials_types.h
include/sundials/priv/: sundials_context_impl.h
include/sunlinsol/: sunlinsol_magmadense.h  sunlinsol_psblas.h
include/sunmatrix/: sunmatrix_psblas.h
src/arkode/: arkode.c  arkode_arkstep.c  arkode_arkstep_io.c  arkode_bandpre.c  arkode_bbdpre.c  arkode_erkstep.c  arkode_impl.h  arkode_interp.c  arkode_io.c  arkode_ls.c  arkode_mristep.c  arkode_root.c  arkode_sprkstep.c  arkode_sprkstep_io.c
src/arkode/xbraid/: arkode_xbraid.c
src/cvode/: CMakeLists.txt  cvode.c  cvode_impl.h  cvode_io.c
src/nvector/: CMakeLists.txt
src/nvector/cuda/: nvector_cuda.cu
src/nvector/hip/: nvector_hip.hip.cpp
src/nvector/psblas/: CMakeLists.txt  make2cmakeset.sh  nvector_psblas.c
src/sundials/: CMakeLists.txt  sundials_allocator.c  sundials_allocator_system.c  sundials_allocator_system.h  sundials_context.c  sundials_nvector.c  sundials_profiler.c  sundials_utils.h
src/sunlinsol/: CMakeLists.txt
src/sunlinsol/magmadense/: sunlinsol_magmadense.cpp
src/sunlinsol/psblas/: CMakeLists.txt  make2cmakeset.sh  makeincinputcmake  sunlinsol_psblas.c
src/sunmatrix/: CMakeLists.txt
src/sunmatrix/psblas/: CMakeLists.txt  sunmatrix_psblas.c
src/sunnonlinsol/fixedpoint/: sunnonlinsol_fixedpoint.c
test/: config_cmake.py  test_driver.sh
test/env/: docker.sh  setup_env.sh
test/unit_tests/: CMakeLists.txt
test/unit_tests/arkode/CXX_serial/: ark_test_dahlquist_ark.cpp  ark_test_dahlquist_erk.cpp  ark_test_dahlquist_mri.cpp
test/unit_tests/cvode/CXX_serial/: CMakeLists.txt
test/unit_tests/cvode/C_serial/: cv_test_tstop.c
